# LM-Studio-Toolkit

./: .env.example  .gitattributes  .gitignore  AGENT_ROADMAP.md  ARCHITECTURE_REPORT.md  INSTALL.md  LICENSE  LM-Studio-MCP.md  NOTICE  README.md  TROUBLESHOOTING.md  eslint.config.mjs  install.ps1  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  uninstall-proxy-service.sh
.husky/: pre-commit
Installer/: Cargo.toml  README.md  electron.vite.config.ts  jest.config.cjs  jest.config.js
Installer/_legacy-electron/: package.json
Installer/_legacy-electron/resources/payload/toolkit/: package.json
Installer/_legacy-electron/resources/runtime/: manifest.json
Installer/_legacy-electron/scripts/: stage-payload.mjs
Installer/linux/: README.md
Installer/linux/src-tauri/: Cargo.toml
Installer/linux/src-tauri/src/: main.rs
Installer/macos/: README.md
Installer/macos/src-tauri/: Cargo.toml
Installer/macos/src-tauri/src/: main.rs
Installer/resources/payload/toolkit/: README.md  package.json
Installer/resources/payload/toolkit/Basic/: package.json
Installer/resources/payload/toolkit/BlenderBridge/: Advanced_Blender_Engineering_Skills_Python_API_MCP_Reference.md  KNOWN_ISSUES.md  README.md
Installer/resources/payload/toolkit/Browserless/: README.md  package.json
Installer/resources/payload/toolkit/Calculator/: tsconfig.json
Installer/resources/payload/toolkit/Clock/: package.json
Installer/resources/payload/toolkit/PythonShell/: jest.config.js
Installer/resources/payload/toolkit/RAG/: jest.config.js
Installer/resources/payload/toolkit/Skills/: jest.config.js  package.json
Installer/resources/payload/toolkit/SlashCommands/: README.md  jest.config.js  package.json
Installer/resources/payload/toolkit/Terminal/: package.json
Installer/resources/payload/toolkit/WebBrowser/: jest.config.js
Installer/resources/payload/toolkit/scripts/: mcp-askpass.sh  test.js
Installer/resources/payload/toolkit/shared/: createToolServer.ts  package.json  ports.ts  sessionApproval.ts  toolCallNormalizer.d.ts  tools.ts  types.d.ts  types.ts
Installer/scripts/: compile-counter.mjs  dist-win.mjs  electron-vite-build.mjs  prepare-resources.mjs  select-icon.mjs  stage-payload.mjs  stage-runtime.mjs
Installer/shared/: tools.json
Installer/shared/core/: Cargo.toml
Installer/shared/core/src/: diagnostics.rs  error.rs  github_issue.rs  lib.rs  license.rs  lmstudio.rs  paths.rs  payload.rs  phases.rs  runtime.rs  tools.rs
Installer/shared/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Installer/shared/ui/src/: App.tsx  styles.css
Installer/shared/ui/src/components/: ErrorBoundary.tsx  WizardShell.tsx
Installer/shared/ui/src/lib/: tauri.ts
Installer/shared/ui/src/pages/: DonePage.tsx  ErrorPage.tsx  LicensePage.tsx  LocationPage.tsx  OptionsPage.tsx  ProgressPage.tsx  WelcomePage.tsx
Installer/src/main/: bootstrap.ts  env-manager.ts  index.ts  ipc-handlers.ts  lmstudio-sync.ts  mcp-config.ts  runtime-manager.ts  script-path.ts  setup-runner.ts  tool-status.ts  types.ts
Installer/src/preload/: index.ts
Installer/src/renderer/src/: App.tsx  main.tsx
Installer/src/renderer/src/hooks/: useSetup.ts  useToolStatus.ts
Installer/tests/: env-manager.property.test.ts  env-manager.test.ts  lmstudio-sync.property.test.ts  mcp-config.property.test.ts  mcp-config.test.ts  registry-bug-condition.test.ts  registry-preservation.test.ts  script-path.test.ts  token-roundtrip.property.test.ts
Installer/tests/__mocks__/: electron.ts
Installer/windows/: README.md
Installer/windows/scripts/: build.ps1  dev.ps1
Installer/windows/src-tauri/: Cargo.toml  tauri.conf.json
Installer/windows/src-tauri/capabilities/: default.json
Installer/windows/src-tauri/src/: main.rs
(+624 files in other folders)
