[workspace]
resolver = "2"
members = [
    "shared/core",
    "windows/src-tauri",
]
exclude = [
    "_legacy-electron",
    "macos/src-tauri",
    "linux/src-tauri",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["expDigit Studio"]
license = "See LICENSE"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2"
log = "0.4"
env_logger = "0.11"
