[package]
name = "llmtk-macos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

# Skeleton only — excluded from the workspace until a macOS host builds it.
# See ../README.md for the plan.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llmtk-core = { path = "../../shared/core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
